--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,58 @@
+
+# Created by https://www.gitignore.io/api/scala,angular,playframework
+# Edit at https://www.gitignore.io/?templates=scala,angular,playframework
+
+### Angular ###
+## Angular ##
+# compiled output
+/ui/dist
+/ui/tmp
+/ui/**/*.js
+/ui/**/*.js.map
+
+# dependencies
+ui/node_modules/
+/ui/bower_components
+
+# IDEs and editors
+/.idea
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+#System Files
+.DS_Store
+
+### PlayFramework ###
+# Ignore Play! working directory #
+bin/
+/db
+.eclipse
+/lib/
+/logs/
+/modules
+/project/project
+/project/target
+/target
+tmp/
+test-result
+server.pid
+*.eml
+/dist/
+.cache
+
+### Scala ###
 *.class
 *.log
+
+# End of https://www.gitignore.io/api/scala,angular,playframework
