--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,7 @@ akka {
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
 play.http.secret.key = "changeme"
+play.filters.enabled += play.filters.cors.CORSFilter
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -283,7 +284,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
-    #allowed = [".example.com", "localhost:9000"]
+    allowed = ["127.0.0.1:9000"]
   }
 }
 
