--- a/conf/application.conf
+++ b/conf/application.conf
@@ -284,7 +284,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
-    allowed = ["127.0.0.1:9000"]
+    allowed = ["127.0.0.1:9000", "localhost:9000"]
   }
 }
 
