--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,8 +1,9 @@
-FROM nginx:latest
+FROM nginx:1.14.1-alpine
+
+COPY ./nginx.conf /etc/nginx/conf.d/
 
 RUN rm -rf /usr/share/nginx/html/*
 
-COPY ./nginx.conf /etc/nginx/nginx.conf
-COPY ./dist/scala-play-angular-seed /var/www/html
+COPY ./dist/scala-play-angular-seed /usr/share/nginx/html
 
-EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
