--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -1,11 +1,7 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80;
 
-    root /var/www/html;
-    index index.html index.htm index.nginx-debian.html;
-
-    server_name _;
+    root /usr/share/nginx/html;
 
     location / {
         try_files $uri $uri/ /index.html =404;
