--- a/conf/docker-compose.yml
+++ b/conf/docker-compose.yml
@@ -19,3 +19,6 @@ services:
     image: tai-frontend:1
     ports:
       - 80:80
+    environment:
+      - BACKEND_URL=backend
+    command: /bin/sh -c "envsubst < /etc/nginx/conf.d/nginx.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
