--- a/ui/package.json
+++ b/ui/package.json
@@ -27,11 +27,17 @@
     "@angular/platform-browser": "^7.2.9",
     "@angular/platform-browser-dynamic": "^7.2.9",
     "@angular/router": "^7.2.9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-brands-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "i": "^0.3.6",
     "ng2-charts": "^2.2.3",
+    "npm": "^6.9.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
