--- a/ui/package.json
+++ b/ui/package.json
@@ -38,7 +38,8 @@
     "i": "^0.3.6",
     "ng2-charts": "^2.2.3",
     "npm": "^6.9.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
