--- a/ui/package.json
+++ b/ui/package.json
@@ -16,27 +16,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.9",
-    "@angular/compiler": "^7.2.9",
-    "@angular/core": "^7.2.9",
-    "@angular/forms": "^7.2.9",
-    "@angular/http": "^7.2.9",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.9",
-    "@angular/platform-browser-dynamic": "^7.2.9",
-    "@angular/router": "^7.2.9",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
-    "chart.js": "^2.8.0",
-    "core-js": "^2.5.4",
+    "chart.js": "~2.8.0",
+    "core-js": "~2.5.7",
     "i": "^0.3.6",
-    "ng2-charts": "^2.2.3",
+    "ng2-charts": "~2.0.0",
     "npm": "^6.9.0",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
@@ -46,8 +46,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "^7.3.6",
-    "@angular/compiler-cli": "^7.2.9",
-    "@angular/language-service": "^7.2.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
